src/main/java/com/example/assignment/global/error/exception/InvalidTokenException.java
package com.example.assignment.global.error.exception;public class InvalidTokenException {
}
